amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-object.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-object.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'mapUrl'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-extension-object.api.graphql#/declares/shape/Location
  Property: http://www.w3.org/ns/shacl#property
  Range: [(5,0)-(8,1)]
  Location: 
